instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:6: error: ';' expected but '(' found.
gauche():avance()
               ^